[project]
name = "clipboard-bridge"
version = "0.1.0"
description = "Cloud clipboard fleet with worker hub and local agent CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyperclip>=1.9.0",
    "websockets>=15.0.1",
]

[project.scripts]
abc = "clipcli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["clipcli.py", "worker.js", "wrangler.toml"]
